--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.4",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.7",
     "@rainbow-me/rainbowkit": "^1.0.4",
+    "formik": "^2.4.2",
     "next": "^13.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,8 +25,11 @@
   "devDependencies": {
     "@types/node": "^18.16.12",
     "@types/react": "^18.2.6",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.15.0",
     "eslint-config-next": "^13.4.3",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
   }
 }
